--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.aorise.weeklyreport"
-        minSdkVersion 26
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.hjq:toast:3.0'
     //basepopu
     implementation 'com.github.razerdp:BasePopup_Candy:2.1.9-beta5'
+    implementation 'com.youth.banner:banner:1.4.10'
 }
