--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     //basepopu
     implementation 'com.github.razerdp:BasePopup_Candy:2.1.9-beta5'
     implementation 'com.youth.banner:banner:1.4.10'
+    //图片加载glide
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
 }
