--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     implementation 'com.youth.banner:banner:1.4.10'
     //图片加载glide
     implementation 'com.github.bumptech.glide:glide:4.7.1'
+    //日历
+    implementation 'com.haibin:calendarview:3.6.2'
+    //implementation 'cn.qqtheme.framework:WheelPicker:1.5.6'
 }
