--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,23 +15,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <!--项目选择 项目组成员选择 界面 -->
-        <activity android:name=".activity.ChooseProjectActivity"></activity>
-        <!--项目概况 界面 -->
-        <activity android:name=".activity.ProjectInfoActivity" />
-        <!--项目周报添加与查看界面-->
-        <activity android:name=".activity.ReviewAndToFillReportActivity" />
-        <!--项目周报整体情况填写界面-->
-        <activity android:name=".activity.OverAllSituationActivity" />
-        <!--项目周报查看界面-->
-        <activity android:name=".activity.ProjectReportManagerActivity" />
-        <!--项目周报详情界面-->
-        <activity android:name=".activity.WeeklyReportDetailActivity" />
-        <!-- 项目组成员 周报查看界面 -->
-        <activity android:name=".activity.AuditWeeklyReportActivity" />
-        <!--新增或者编辑周报界面 -->
-        <activity android:name=".activity.EditReportActivity" />
-        <!-- 登录界面 -->
+        <activity android:name=".activity.SettingsNextWeekPlanActivity"></activity>
+        <!-- 项目选择 项目组成员选择 界面 -->
+        <activity android:name=".activity.ChooseProjectActivity" /> <!-- 项目概况 界面 -->
+        <activity android:name=".activity.ProjectInfoActivity" /> <!-- 项目周报添加与查看界面 -->
+        <activity android:name=".activity.ReviewAndToFillReportActivity" /> <!-- 项目周报整体情况填写界面 -->
+        <activity android:name=".activity.OverAllSituationActivity" /> <!-- 项目周报查看界面 -->
+        <activity android:name=".activity.ProjectReportManagerActivity" /> <!-- 项目周报详情界面 -->
+        <activity android:name=".activity.WeeklyReportDetailActivity" /> <!-- 项目组成员 周报查看界面 -->
+        <activity android:name=".activity.AuditWeeklyReportActivity" /> <!-- 新增或者编辑周报界面 -->
+        <activity android:name=".activity.FillReportActivity" /> <!-- 登录界面 -->
         <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,8 +34,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
