--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.SettingsNextWeekPlanActivity"></activity>
-        <!-- 项目选择 项目组成员选择 界面 -->
+        <activity android:name=".activity.ProjectStatisticsActivity"
+            android:screenOrientation="landscape"></activity>
+        <activity android:name=".activity.SettingsNextWeekPlanActivity" /> <!-- 项目选择 项目组成员选择 界面 -->
         <activity android:name=".activity.ChooseProjectActivity" /> <!-- 项目概况 界面 -->
-        <activity android:name=".activity.ProjectInfoActivity" /> <!-- 项目周报添加与查看界面 -->
+        <activity
+            android:name=".activity.ProjectInfoActivity"
+            android:screenOrientation="portrait" /> <!-- 项目周报添加与查看界面 -->
         <activity android:name=".activity.ReviewAndToFillReportActivity" /> <!-- 项目周报整体情况填写界面 -->
         <activity android:name=".activity.OverAllSituationActivity" /> <!-- 项目周报查看界面 -->
         <activity android:name=".activity.ProjectReportManagerActivity" /> <!-- 项目周报详情界面 -->
