--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,14 +17,13 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:design:28.0.0'
@@ -32,7 +31,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     //网络请求日志
@@ -56,5 +54,6 @@ dependencies {
     //日历
     implementation 'com.haibin:calendarview:3.6.2'
     //implementation 'cn.qqtheme.framework:WheelPicker:1.5.6'
-
+    //implementation 'com.github.huangyanbin:SmartTable:2.2.0'
+    implementation project(':tablet')
 }
