修改工时统计BUG，添加搜索条件，在项目列表时搜索项目工作，则展示项目工作，搜索部门工作，则展示类型为2的部门工作

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".activity.WeekWorkTimeActivity"></activity>
         <activity android:name=".activity.WorkTimeYearStatisticsActivity"></activity>
+        <activity android:name=".activity.WorkTimeMonthStatisticsActivity"></activity>
         <activity
             android:name=".activity.ProjectStatisticsActivity"
             android:screenOrientation="landscape" />
