--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".SplashActivity"
+            android:theme="@style/AppTheme.FullscreenTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".activity.ChooseMemeberActivity" /> <!-- 成员选择 界面 暂时没有使用 -->
         <activity android:name=".activity.WorkTimeYearStatisticsActivity" /> <!-- 按年份统计工时 -->
         <activity android:name=".activity.WorkTimeMonthStatisticsActivity" /> <!-- 按月份统计工时 -->
@@ -28,11 +35,7 @@
         <activity android:name=".activity.AuditWeeklyReportActivity" /> <!-- 审批周报界面 -->
         <activity android:name=".activity.FillReportActivity" /> <!-- 新增或者编辑周报界面 -->
         <activity android:name=".activity.LoginActivity"> <!-- 登录界面 -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
